--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 **/desktop.ini
+*ls-dyna-automatization/misc/fafo/
+*ls-dyna-automatization/misc/save/
+ls-dyna-automatization/lspost.cfile
+ls-dyna-automatization/lspost.msg
