--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 *ls-dyna-automatization/misc/save/
 ls-dyna-automatization/lspost.cfile
 ls-dyna-automatization/lspost.msg
+*ls-dyna-automatization/output
