--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ ls-dyna-automatization/lspost.msg
 ls-dyna-automatization/powershell_scripts/lsrun_powershell.ps1
 *ls-dyna-automatization/__pycache__
 ls-dyna-automatization/parameter_text.txt
+**__pycache__/
