--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ ls-dyna-automatization/powershell_scripts/lsrun_powershell.ps1
 *ls-dyna-automatization/__pycache__
 ls-dyna-automatization/parameter_text.txt
 **__pycache__/
+ls-dyna-automatization/0c45d099-1516-4397-bbb3-be9b095eabca.html
