my_sql 80% implemented

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ ls-dyna-automatization/parameter_text.txt
 **__pycache__/
 ls-dyna-automatization/0c45d099-1516-4397-bbb3-be9b095eabca.html
 machine-learning/fafo/
+machine-learning/x-data
+machine-learning/y-data
