--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ ls-dyna-automatization/0c45d099-1516-4397-bbb3-be9b095eabca.html
 machine-learning/fafo/
 machine-learning/x-data
 machine-learning/y-data
+*ls-dyna-automatization/export
